# meta-helper

./: .gitignore  JOURNAL.md  MIGRATION-JAVA.md  README.md  pyproject.toml  pytest.ini  requirements_migrated.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle.kts
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/metahelper/app/: ApiClient.kt  AudioPlayer.kt  GalleryWatcher.kt  GlassesManager.kt  MainActivity.kt  VolumeController.kt  WearableService.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
android/app/src/test/kotlin/com/metahelper/app/: GalleryWatcherTest.kt  MainActivityStateTest.kt
backend/: .env.example  Dockerfile  build.gradle.kts  requirements.txt  settings.gradle.kts
backend/app/: main.py
backend/app/services/: audio.py  vision.py
backend/src/main/java/com/metahelper/: MetaHelperApplication.java
backend/src/main/java/com/metahelper/controller/: ImageController.java
backend/src/main/java/com/metahelper/service/: AudioService.java  TtsService.java  VisionService.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/metahelper/: ImageControllerTest.java
backend/src/test/java/com/metahelper/service/: AudioServiceTest.java  TtsServiceTest.java  VisionServiceTest.java
backend/tests/: test_main.py  test_process_image.py  test_services.py
docs/: meta-app-submission.md
(+1 files in other folders)
